--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
-    <Button
+    <ImageButton
         android:id="@+id/button_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_weight="1"
+        android:tint="@android:color/black"
+        app:srcCompat="@android:drawable/ic_media_play" />
 
-    <Button
-        android:id="@+id/button_stop"
+    <ImageButton
+        android:id="@+id/button_pause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:elevation="0dp"
-        android:text="Button" />
+        android:tint="@android:color/black"
+        app:srcCompat="@android:drawable/ic_media_pause" />
 </LinearLayout>
